<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar" />



    <TextView
        android:id="@+id/newsTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/news_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/newsDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsTitleTextView"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:text="@string/news_date"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/newsDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsDateTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/news_description"
        android:textSize="16sp" />

    <Button
        android:id="@+id/addToFavoriteButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsDescriptionTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="245dp"
        android:layout_marginTop="8dp"
        android:text="@string/favourite_button" />

</RelativeLayout>
