<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    <FrameLayout
        android:id="@+id/searchEditTextContainer"
        android:layout_width="378dp"
        android:layout_height="131dp"
        android:layout_below="@id/toolbar"
        android:padding="8dp">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_keyword_hint"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="52dp"
            android:text="@string/search_button" />

    </FrameLayout>

    <TextView
        android:id="@+id/newsHeadlineTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchEditTextContainer"
        android:layout_marginTop="16dp"
        android:text="@string/loading" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


    </RelativeLayout>

</RelativeLayout>
